2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for the next release.

2006-05-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py (MonitoredEntry.set_text): added function

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Repository export.
	* src/GrampsDb/_GrampsInMemDB.py (GrampsInMemDB.__init__): Remove
	unused variables.
	* src/plugins/Calendar.py (print_page): Use correct variable.

2006-05-21  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py.in: fix file open.
	* src/plugins/Calendar.py: make calendar work in Windows
	* src/GrampsLocale.py: make calendar work in Windows
	* src/plugins/GraphViz.py: fix unicode encoding
	* src/plugins/TimeLine.py: round all dates to nearest decade

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Do not import unused module.
	* src/const.py.in: Use gettext.
	* src/GrampsDb/_ConstXML.py: Remove file.
	* src/DisplayTabs/_PersonEventEmbedList.py
	(PersonEventEmbedList.default_type): properly process event list.
	* src/Editors/_EditEventRef.py (EditEventRef.get_custom_events):
	Use correct method.
	* src/Editors/_EditEvent.py (EditEvent.get_custom_events)
	(EditPersonEvent.get_custom_events): Use correct method.
	* src/GrampsDb/_GrampsDbBase.py: Remove obsolete methods.
	* src/GrampsDb/_GrampsInMemDB.py: Remove obsolete methods.
	Do not import unused module.

2006-05-20  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: custom menus
	* src/Editors/_EditLdsOrd.py: custom menus
	* src/Editors/_EditSourceRef.py: custom menus
	* src/Editors/_EditSource.py: custom menus
	* src/Editors/_EditRepoRef.py: custom menus
	* src/Editors/_EditUrl.py: custom menus
	* src/Editors/_EditAttribute.py: custom menus
	* src/Editors/_EditPerson.py: custom menus
	* src/Editors/_EditLocation.py: custom menus
	* src/Editors/_EditMediaRef.py: custom menus
	* src/Editors/_EditEventRef.py: custom menus